app/styles/partials/_time-selection.scss
.time-selection {
  width: 95%;
  @media only screen and (min-width: 760px) {
    width: 800px;
  }
  margin-top:10px;
  margin-left: auto;
  margin-right: auto;
  padding-right: 40px;
  text-align: center;
  border-collapse: collapse;
  border-spacing: 1px;
  &.selectable-table {
    td {
      cursor: image-url("desktop/pointer-pen.png"), default;
      &.opened {
        background: #dcdddd;
      }
      &.selected {
        background: $selected-cell-color;
      }
    }
  }
  &.heat-map {
    td {
      &.opened {
        background: $selected-cell-color;
        @for $i from 0 through 100 {
          &.alpha-#{$i} {
            filter: "alpha(opacity=$i)";
            opacity: $i / 100;
          }
        }
      }
      &.time-cell:not(.opened) {
        opacity: 1;
        filter: "alpha(opacity=100)";
      }
    }
  }
  tr {
    &.days-of-week {
      td {
        padding-top: 10px;
        padding-bottom: 10px;
        font-size: 16px;
        letter-spacing: 0.1em;
        line-height: 1.3em;
        background-color: inherit;
      }
    }
    &.even-time-true {
      td:first-child {
        background: #FFF4E1;
      }
    }
    &.even-time-false {
      td:first-child {
        background: #D5EEDA;
      }
    }
    td {
      text-align: center;
      color: $main-color;
      font-weight: bold;
      background: #cdcdcd;
      &.cell {
        width: 5%;
        @media only screen and (min-width: 760px) {
          width: 10%;
        }
        height: 20px;
        &.time-label {
          width: 1%;
          padding-left: 5px;
          padding-right: 5px;
          text-align: right;
          font-size: 12px;
          color: #535353;
          cursor: default;
        }
      }
    }
  }

  /* オリジナルスクロールバー
  ::-webkit-scrollbar {
      width: 12px;
  }
  ::-webkit-scrollbar-track {
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
      -webkit-border-radius: 10px;
      border-radius: 10px;
  }
  ::-webkit-scrollbar-thumb {
      -webkit-border-radius: 10px;
      border-radius: 10px;
      background: rgba(255,0,0,0.8);
      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
  }
  ::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(255,0,0,0.4);
  }
  */

}

